# claude-agent-cookbook

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
architecture/: blueprint.json
common/: __init__.py  client.py  eval.py  logging.py  test_client.py  test_eval.py  test_logging.py  test_tools.py  tools.py  types.py
docs/: cloud-ai-architecture.md  migration-from-openai.md  production-considerations.md  when-to-use-what.md
docs/adr/: 001-client-wrapper-design.md  002-eval-rubric-strategy.md
docs/architecture/: blueprint.json
recipes/: __init__.py  _fixtures.py
recipes/01-tool-use/: README.md  expected_output.json  prompt.md  recipe.py  test_recipe.py
recipes/02-multi-turn-tool-use/: README.md  expected_output.json  prompt.md  recipe.py  test_recipe.py
recipes/03-rag/: README.md  expected_output.json  prompt.md  recipe.py  test_recipe.py
recipes/03-rag/corpus/: 01_rate_limits.md  02_prompt_caching.md  03_tool_use.md  04_vision.md  05_extended_thinking.md  06_batch_api.md  07_streaming.md  08_models.md
recipes/04-vision/: README.md  expected_output.json  prompt.md  recipe.py  test_recipe.py
recipes/04-vision/samples/: README.md  minimal_pixel.png.b64  sample_invoice.txt
recipes/05-prompt-caching/: README.md  expected_output.json  prompt.md  recipe.py  test_recipe.py
recipes/06-batch-api/: README.md  batch_input.jsonl  expected_output.json  prompt.md  recipe.py  test_recipe.py
recipes/07-extended-thinking/: README.md  expected_output.json  prompt.md  recipe.py  test_recipe.py
recipes/08-multi-agent/: README.md  expected_output.json  prompt.md  recipe.py  test_recipe.py
recipes/09-streaming-with-interruption/: README.md  expected_output.json  prompt.md  recipe.py  test_recipe.py
recipes/10-eval-framework/: README.md  example_gold_set.jsonl  framework.py  rubrics.py  test_framework.py
recipes/10-eval-framework/reports/: sample_report.md
scripts/: run_recipe.sh
